--- a/Tema5/index1/index12.html
+++ b/Tema5/index1/index12.html
@@ -7,9 +7,9 @@
 <body bgcolor="#14C9B0">
   <p align=center><Font face="Segoe Print" size=7 color="white">Музика</Font></p>
   <p><Font face="Segoe Print" size=5 color="white">Trek 1</Font><br>
-    <link href="https://oxy.sunproxy.net/file/dEFGdDdTVnhvNkZFdU9WWFVBVGtEQTh4Yjc5bndHTU1hUXJ5NGhvQmhYR1pvL2xUSTM0K1VJVk4rVEEvQ0hiK095d21kRU9Pc0s4REVQek9JZTVLRE5EelJzVHhycTl0bGVTVENlbVpoczQ9/Guns_N_Roses_-_November_Rain_(oxy.fm).mp3" title="Guns N'Roses - November rain" type="audio/x-mpeg-3">
-<Font face="Segoe Print" size=5 color="white">Trek 2</Font><embed src="https://oxy.sunproxy.net/file/dEFGdDdTVnhvNkZFdU9WWFVBVGtEQTh4Yjc5bndHTU1hUXJ5NGhvQmhYR1pvL2xUSTM0K1VJVk4rVEEvQ0hiK095d21kRU9Pc0s4REVQek9JZTVLRE5EelJzVHhycTl0bGVTVENlbVpoczQ9/Guns_N_Roses_-_November_Rain_(oxy.fm).mp3">
-<Font face="Segoe Print" size=5 color="white">Trek 3</Font><object data="http://ol3.mp3party.net/online/3750/3"https://oxy.sunproxy.net/file/dEFGdDdTVnhvNkZFdU9WWFVBVGtEQTh4Yjc5bndHTU1hUXJ5NGhvQmhYR1pvL2xUSTM0K1VJVk4rVEEvQ0hiK095d21kRU9Pc0s4REVQek9JZTVLRE5EelJzVHhycTl0bGVTVENlbVpoczQ9/Guns_N_Roses_-_November_Rain_(oxy.fm).mp3"750155.mp3" type="audio/mpeg3"></object>
-<Font face="Segoe Print" size=5 color="white">Trek 4</Font><audio src="https://oxy.sunproxy.net/file/dEFGdDdTVnhvNkZFdU9WWFVBVGtEQTh4Yjc5bndHTU1hUXJ5NGhvQmhYR1pvL2xUSTM0K1VJVk4rVEEvQ0hiK095d21kRU9Pc0s4REVQek9JZTVLRE5EelJzVHhycTl0bGVTVENlbVpoczQ9/Guns_N_Roses_-_November_Rain_(oxy.fm).mp3"></audio>
+    <link href="https://open.spotify.com/track/53968oKecrFxkErocab2Al" title="Guns N'Roses - November rain" type="audio/x-mpeg-3">
+<Font face="Segoe Print" size=5 color="white">Trek 2</Font><embed src="https://open.spotify.com/track/53968oKecrFxkErocab2Al">
+<Font face="Segoe Print" size=5 color="white">Trek 3</Font><object data="https://open.spotify.com/track/53968oKecrFxkErocab2Al" type="audio/mpeg3"></object>
+<Font face="Segoe Print" size=5 color="white">Trek 4</Font><audio src="https://open.spotify.com/track/53968oKecrFxkErocab2Al"></audio>
   </body>
 </html>
