--- a/Tema5/index1/index11.html
+++ b/Tema5/index1/index11.html
@@ -10,7 +10,7 @@
 <tr>
 <td><img src="https://static.iledebeaute.ru/files/images/imgsng/part_20/410785/src/120420112440.jpeg" alt="Фотографії" width="500" height="374"></td>
 <td><img src="http://www.cs.tlu.ee/~kristjan/kasutajaliidesed/tunnid/T0900/VI%20tund/isotope/Chrysanthemum.jpg" alt="Фотографії" width="300" height="400"></td>
-<td><img scr="https://www.flowerpicturegallery.com/d/9846-1/flower+arrangements+with+hydrangeas.jpg" alt="Фотографії"></td>
+<td><img scr="http://www.obradoval.ru/spaw2/uploads/images/%D1%82%D1%8E%D0%BB%D1%8C%D0%BF%D0%B0%D0%BD%20%D1%80%D0%BE%D0%B7.jpg" alt="Фотографії"></td>
 </tr>
 </table>
 </body>
