--- a/Tema5/index1/index12.html
+++ b/Tema5/index1/index12.html
@@ -7,9 +7,9 @@
 <body bgcolor="#14C9B0">
   <p align=center><Font face="Segoe Print" size=7 color="white">Музика</Font></p>
   <p><Font face="Segoe Print" size=5 color="white">Trek 1</Font><br>
-    <link href="https://z1.fm/song/13466013" title="Guns N'Roses - November rain" type="audio/x-mpeg-3"><br>
-<Font face="Segoe Print" size=5 color="white">Trek 2</Font><embed src="https://open.spotify.com/track/53968oKecrFxkErocab2Al"><br>
-<Font face="Segoe Print" size=5 color="white">Trek 3</Font><object data="https://open.spotify.com/track/53968oKecrFxkErocab2Al" type="audio/mpeg3"></object><br>
-<Font face="Segoe Print" size=5 color="white">Trek 4</Font><audio src="https://open.spotify.com/track/53968oKecrFxkErocab2Al"></audio>
+    <link href="" title="Guns N'Roses - November rain" type=""><br>
+<Font face="Segoe Print" size=5 color="white">Trek 2</Font><embed src=""><br>
+<Font face="Segoe Print" size=5 color="white">Trek 3</Font><object data="" type="audio/mpeg3"></object><br>
+<Font face="Segoe Print" size=5 color="white">Trek 4</Font><audio src=""></audio>
   </body>
 </html>
