--- a/Tema5/index1/index12.html
+++ b/Tema5/index1/index12.html
@@ -7,9 +7,9 @@
 <body bgcolor="#14C9B0">
   <p align=center><Font face="Segoe Print" size=7 color="white">Музика</Font></p>
   <p><Font face="Segoe Print" size=5 color="white">Trek 1</Font><br>
-    <link href="" title="Guns N'Roses - November rain" type=""><br>
-<Font face="Segoe Print" size=5 color="white">Trek 2</Font><embed src=""><br>
-<Font face="Segoe Print" size=5 color="white">Trek 3</Font><object data="" type="audio/mpeg3"></object><br>
-<Font face="Segoe Print" size=5 color="white">Trek 4</Font><audio src=""></audio>
+    <link href="Jully0506.github.io/Tema5/index1/guns-n039-roses-november-rain.mp3" title="Guns N'Roses - November rain" type="audio/mp3"><br>
+<Font face="Segoe Print" size=5 color="white">Trek 2</Font><embed src="Jully0506.github.io/Tema5/index1/guns-n039-roses-november-rain.mp3"><br>
+<Font face="Segoe Print" size=5 color="white">Trek 3</Font><object data="Jully0506.github.io/Tema5/index1/guns-n039-roses-november-rain.mp3" type="audio/mpeg3"></object><br>
+<Font face="Segoe Print" size=5 color="white">Trek 4</Font><audio src="Jully0506.github.io/Tema5/index1/guns-n039-roses-november-rain.mp3"></audio>
   </body>
 </html>
