--- a/Tema5/index1/index12.html
+++ b/Tema5/index1/index12.html
@@ -7,9 +7,14 @@
 <body bgcolor="#14C9B0">
   <p align=center><Font face="Segoe Print" size=7 color="white">Музика</Font></p>
   <p><Font face="Segoe Print" size=5 color="white">Trek 1</Font><br>
-    <link href="guns-n039-roses-november-rain.mp3" title="Guns N'Roses - November rain" type="audio/mp3"><br>
-<Font face="Segoe Print" size=5 color="white">Trek 2</Font><embed src="guns-n039-roses-november-rain.mp3"><br>
-<Font face="Segoe Print" size=5 color="white">Trek 3</Font><object data="guns-n039-roses-november-rain.mp3" type="audio/mpeg3"></object><br>
-<Font face="Segoe Print" size=5 color="white">Trek 4</Font><audio src="guns-n039-roses-november-rain.mp3"></audio>
+    <a href="guns-n039-roses-november-rain.mp3" type="audio/mpeg3">Прослухати</a><br>
+<Font face="Segoe Print" size=5 color="white">Trek 2</Font>
+    <embed src="guns-n039-roses-november-rain.mp3"><br>
+<Font face="Segoe Print" size=5 color="white">Trek 3</Font>
+    <object data="guns-n039-roses-november-rain.mp3" type="audio/mpeg3"></object><br>
+<Font face="Segoe Print" size=5 color="white">Trek 4</Font>
+    <audio controls="controls">
+      <source src="guns-n039-roses-november-rain.mp3" type="audio/mpeg3">
+    </audio>
   </body>
 </html>
