--- a/Tema5/index1/index12.html
+++ b/Tema5/index1/index12.html
@@ -1,4 +1,5 @@
 <html>
+<html>
 <head>
 <title>
 Музика
@@ -6,14 +7,14 @@
 </head>
 <body bgcolor="#14C9B0">
   <p align=center><Font face="Segoe Print" size=7 color="white">Музика</Font></p>
-  <p align=center><Font face="Segoe Print" size=5 color="white">Trek 1</Font></p><br>
-    <p align=center><a href="guns-n039-roses-november-rain.mp3" type="audio/mpeg3"><Font face="Segoe Print" size=4 color="white">Прослухати</Font></a></p><br>
-  <p align=center><Font face="Segoe Print" size=5 color="white">Trek 2</Font></p>
-      <p align=center><embed src="guns-n039-roses-november-rain.mp3" height="20%" width="30%"></p><br>
-<p align=center><Font face="Segoe Print" size=5 color="white">Trek 3</Font></p>
+  <p align=center><Font face="Segoe Print" size=5 color="#8E44AD">Trek 1</Font></p><br>
+    <p align=center><a href="guns-n039-roses-november-rain.mp3" type="audio/mpeg3"><Font face="Segoe Print" size=4 color="#AED6F1">Прослухати</Font></a></p><br>
+  <p align=center><Font face="Segoe Print" size=5 color="#8E44AD">Trek 2</Font></p>
+      <p align=center><embed src="guns-n039-roses-november-rain.mp3" height="25%" width="30%"></p><br>
+<p align=center><Font face="Segoe Print" size=5 color="#8E44AD">Trek 3</Font></p>
       <p align=center><object data="guns-n039-roses-november-rain.mp3" type="audio/mpeg3"></object></p><br>
-<p align=center><Font face="Segoe Print" size=5 color="white">Trek 4</Font></p>
-      <p align=center><audio controls="controls">
+<p align=center><Font face="Segoe Print" size=5 color="#8E44AD">Trek 4</Font></p>
+      <p align=center><audio>
       <source src="guns-n039-roses-november-rain.mp3" type="audio/mpeg3">
     </audio></p>
   </body>
