--- a/Tema5/index1/index12.html
+++ b/Tema5/index1/index12.html
@@ -14,8 +14,7 @@
 <p align=center><Font face="Segoe Print" size=5 color="#5B2C6F">Trek 3</Font></p>
       <p align=center><object data="guns-n039-roses-november-rain.mp3" type="audio/mpeg3"></object></p><br>
 <p align=center><Font face="Segoe Print" size=5 color="#5B2C6F">Trek 4</Font></p>
-      <p align=center><audio controls>
-      <source src="guns-n039-roses-november-rain.mp3" type="audio/mpeg3">
+      <p align=center><audio src="guns-n039-roses-november-rain.mp3" type="audio/mpeg3" controls>
     </audio></p>
   </body>
 </html>
