--- a/Tema5/index1/index13.html
+++ b/Tema5/index1/index13.html
@@ -6,16 +6,16 @@
 </head>
 <body>
 <p align=center><Font face="Segoe Print" size=7 color="white"><b>Відео<b></Font></p>
-Video 1
-<a href="" type=""></a>
-Video 2
-<embed src="" type="">
-Video 3
-<object data="" type="">
+  <p><Font face="Segoe Print" size=6 color="white">Video 1</Font></p>
+<a href="videoplayback.mp4" type="video/mp4"></a>
+  <p><Font face="Segoe Print" size=6 color="white">Video 2</Font></p>
+<embed src="videoplayback.mp4" type="video/mp4">
+  <p><Font face="Segoe Print" size=6 color="white">Video 3</Font></p>
+<object data="videoplayback.mp4" type="video/mp4">
 <hr>
-Video 4
+  <p><Font face="Segoe Print" size=6 color="white">Video 4</Font></p>
 <video>
-<source src="">
+<source src="videoplayback.mp4">
 </video>
 </body>
 </html>
