--- a/Tema5/index1/index13.html
+++ b/Tema5/index1/index13.html
@@ -5,15 +5,15 @@
 </title>
 </head>
 <body>
-<p align=center><Font face="Segoe Print" size=7 color="white"><b>Відео<b></Font></p>
-  <p><Font face="Segoe Print" size=6 color="white">Video 1</Font></p>
-<a href="videoplayback.mp4" type="video/mp4"></a>
-  <p><Font face="Segoe Print" size=6 color="white">Video 2</Font></p>
+<p align=center><Font face="Segoe Print" size=7 color="white">Відео</Font></p>
+  <p><Font face="Segoe Print" size=6 color="white">Відео 1</Font></p>
+<a href="videoplayback.mp4" type="video/mp4">Переглянути</a>
+  <p><Font face="Segoe Print" size=6 color="white">Відео 2</Font></p>
 <embed src="videoplayback.mp4" type="video/mp4">
-  <p><Font face="Segoe Print" size=6 color="white">Video 3</Font></p>
-<object data="videoplayback.mp4" type="video/mp4">
+  <p><Font face="Segoe Print" size=6 color="white">Відео 3</Font></p>
+  <object data="videoplayback.mp4" type="video/mp4"></object>
 <hr>
-  <p><Font face="Segoe Print" size=6 color="white">Video 4</Font></p>
+  <p><Font face="Segoe Print" size=6 color="white">Відео 4</Font></p>
 <video>
 <source src="videoplayback.mp4">
 </video>
