--- a/Tema5/index1/index13.html
+++ b/Tema5/index1/index13.html
@@ -4,7 +4,7 @@
 Відео
 </title>
 </head>
-<body>
+<body bgcolor="#5DADE2">
 <p align=center><Font face="Segoe Print" size=7 color="white">Відео</Font></p>
   <p><Font face="Segoe Print" size=6 color="white">Відео 1</Font></p>
 <a href="videoplayback.mp4" type="video/mp4">Переглянути</a>
