--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -1,16 +1,17 @@
 <html>
 <head>
-<title>
-Троянда столиста
-</title>
-<style>
-h1{color:#C0392B; font-size: xx-large; margin: 20%; font-family:Monotype Corsiva;}
-p{color:#3498DB; font-size:large; margin: 20%; font-family:Calibri;}
-p.end{color:grey; font-style:italic; text-align:right;}
-u{font-style:italic}
+  <title>
+    Троянда столиста
+  </title>
+  <style>
+    h1{color:#C0392B; font-size: xx-large; margin: 20%; font-family:Monotype Corsiva;}
+    p{color:#3498DB; font-size:large; margin: 20%; font-family:Calibri;}
+    p.end{color:grey; font-style:italic; text-align:right;}
+    u{font-style:italic}
+  </style>
 <body>
-<hr>
-<h1>Троянда столиста</h1><p> Граціозні форми, ніжне забарвлення, витончений
+  <hr>
+  <h1>Троянда столиста</h1><p> Граціозні форми, ніжне забарвлення, витончений
 аромат <b>троянди</b> з незапам’ятних часів чарували людей. Тому й
 створено <b>безліч легенд</b> про цю чарівну, ніжну й чудову квітку.</p><p><u> За
 староіндійською легендою,</u> прекрасна богиня <b>Лакшмі</b> народилася з
