--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -4,15 +4,16 @@
     Троянда столиста
   </title>
   <style>
-    h1{color:#C0392B; font-size: xx-large; margin: 20%; font-family:Monotype Corsiva;}
-    p{color:#3498DB; font-size:large; margin: 20%; font-family:Calibri;}
+    h1{color:#C0392B; font-size: xx-large; margin:7% 20%; font-family:Monotype Corsiva;}
+    p{color:#3498DB; font-size:large; margin:7% 20%; font-family:Calibri;}
     p.end{color:grey; font-style:italic; text-align:right;}
     u{font-style:italic}
+    .block1{border-style:double; border-color:red; width:25%; height:25%; padding:25px;}
   </style>
 <body>
   <hr>
-  <h1>Троянда столиста</h1><p> Граціозні форми, ніжне забарвлення, витончений
-аромат <b>троянди</b> з незапам’ятних часів чарували людей. Тому й
+  <h1><b>Троянда столиста</b></h1><p> Граціозні форми, ніжне забарвлення, витончений
+аромат <b>троянди</b> з незапам’ятних часів чарували<div class="block1"><img src="052f8d0c7087d4.jpg" alt="Троянда столиста"></div> людей. Тому й
 створено <b>безліч легенд</b> про цю чарівну, ніжну й чудову квітку.</p><p><u> За
 староіндійською легендою,</u> прекрасна богиня <b>Лакшмі</b> народилася з
 пуп’янка троянди.</p><p><u> У древньому індійському міфі</u> розповідається, що
