--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -12,8 +12,8 @@
   </style>
 <body>
   <hr>
-  <h1><b>Троянда столиста</b></h1><p> Граціозні форми, ніжне забарвлення, витончений
-аромат <b>троянди</b> з незапам’ятних часів чарували<div class="block1"><img src="052f8d0c7087d4.jpg" alt="Троянда столиста"></div> людей. Тому й
+  <h1><b>Троянда столиста</b></h1><div class="block1"><img src="052f8d0c7087d4.jpg" alt="Троянда столиста"></div><p> Граціозні форми, ніжне забарвлення, витончений
+аромат <b>троянди</b> з незапам’ятних часів чарували людей. Тому й
 створено <b>безліч легенд</b> про цю чарівну, ніжну й чудову квітку.</p><p><u> За
 староіндійською легендою,</u> прекрасна богиня <b>Лакшмі</b> народилася з
 пуп’янка троянди.</p><p><u> У древньому індійському міфі</u> розповідається, що
