--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -8,7 +8,7 @@
     p{color:#3498DB; font-size:large; margin:7% 20%; font-family:Calibri;}
     p.end{color:grey; font-style:italic; text-align:right;}
     u{font-style:italic}
-    .block1{border-style:double; border-color:red; width:25%; height:25%; padding:25px;}
+    .block1{border-style:double; border-color:red; position:absolute; right:500px; top:50px;}
   </style>
 <body>
   <hr>
