--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -8,7 +8,7 @@
     p{color:#3498DB; font-size:large; margin:3% 15%; font-family:Calibri;}
     p.end{color:grey; font-style:italic; text-align:right;}
     u{font-style:italic}
-    .block1{border-style:double; border-color:red; position:absolute; left:900px; top:50px; padding:15px; float:right;}
+    .block1{border-style:double; border-color:red; position:absolute; left:900px; top:50px; padding:15px; float:right; width:200px; height:200px;}
   </style>
 <body>
   <hr>
