--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -13,7 +13,7 @@ p.description2{color:black; font-size:medium; font-family:Arial;}
 </head>
 <body>
 <p class="header">Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
-<p><img width="300px" height="316px">tempish_1300001810_39_images_11072990.jpg</p>
+<p><img src="tempish_1300001810_39_images_11072990.jpg" alt="Ковзани фігурні Tempish Olimpia/39 (1300001810/39)" width="300px" height="316"></p>
 <div class="block1">980 грн</div><br>
 <div class="block2">Купити</div>
 <div><p class="description1">Опис Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
