--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -7,8 +7,9 @@
 p.header{color:#2980B9; font-size:xlarge; font-family:Arial;}
 p.description1{color:#3498DB; font-size:large; font-family:Arial;}
 p.description2{color:black; font-size:medium; font-family:Arial;}
-.block1{background-color:#FAD7A0; font-size:medium; font-family:Arial; color:#424949;}
-.block2{background-color:green; font-size:medium; font-family:Arial; color:white;}
+  .block1{background-color:#FAD7A0; font-size:medium; font-family:Arial; color:#424949; float:right; width:200px; height:100px;}
+  .block2{background-color:green; font-size:medium; font-family:Arial; color:white; float:right; width:200px; height:100px;}
+  img{float:left;}
 </style>
 </head>
 <body>
