--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -7,8 +7,8 @@
 p.header{color:#2980B9; font-size:xlarge; font-family:Arial;}
 p.description1{color:#3498DB; font-size:large; font-family:Arial;}
 p.description2{color:black; font-size:medium; font-family:Arial;}
-  .block1{background-color:#FAD7A0; font-size:medium; font-family:Arial; color:#424949; float:right; width:200px; height:100px;}
-  .block2{background-color:green; font-size:medium; font-family:Arial; color:white; float:right; width:200px; height:100px;}
+  .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px;}
+  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px;}
   img{float:left;}
 </style>
 </head>
