--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -5,7 +5,7 @@
   </title>
   <style>
     h1{color:#C0392B; font-size: xx-large; margin:7% 20%; font-family:Monotype Corsiva;}
-    p{color:#3498DB; font-size:large; margin:3% 15%; font-family:Calibri;}
+    p{color:#3498DB; font-size:large; margin:3% 15%; font-family:Calibri; float: left;}
     p.end{color:grey; font-style:italic; text-align:right;}
     u{font-style:italic}
     div.block1{border-style:double; border-color:red; position:absolute; left:900px; top:50px; padding:15px; float:right; width:259px; height:195px;}
