--- a/Tema6/index2/index22.html
+++ b/Tema6/index2/index22.html
@@ -10,8 +10,8 @@ img{display:block; position:absolute; top:10; left:70; width:800; height:400;}
 </style>
 </head>
 <body>
-<img src="" alt="">
-<div class="su"></div>
-<div class="gs"></div>
+<img src="Без названия (1).png" alt="Прапор України">
+<div class="su">Слава Україні!</div>
+<div class="gs">Героям славва!</div>
 </body>
 </html>
