--- a/Tema6/index2/index22.html
+++ b/Tema6/index2/index22.html
@@ -12,6 +12,6 @@ img{display:block; position:absolute; top:10; left:70; width:800; height:400;}
 <body>
 <img src="Без названия (1).png" alt="Прапор України">
 <div class="su">Слава Україні!</div>
-<div class="gs">Героям славва!</div>
+<div class="gs">Героям слава!</div>
 </body>
 </html>
