--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -7,15 +7,15 @@
 p.header{color:#2980B9; font-size:xlarge; font-family:Arial;}
 p.description1{color:#3498DB; font-size:large; font-family:Arial;}
 p.description2{color:black; font-size:medium; font-family:Arial;}
-  .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:500px 100px;}
-  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:500px 300px;}
+  .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:500px 50px;}
+  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:550px 50px;}
   img{float:left;}
 </style>
 </head>
 <body>
 <p class="header">Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
 <p><img src="tempish_1300001810_39_images_11072990.jpg" alt="Ковзани фігурні Tempish Olimpia/39 (1300001810/39)" width="300px" height="316"></p>
-<div class="block1">980 грн</div><br>
+<div class="block1">980 грн</div>
 <div class="block2">Купити</div>
 <div><p class="description1">Опис Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
 <p class="description2">Tempish Olimpia — жіночі фігурні ковзани для аматорського катання і професійного заняття фігурним катанням.
