--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -8,7 +8,8 @@
     p{color:#3498DB; font-size:large; margin:3% 15%; font-family:Calibri; float: left;}
     p.end{color:grey; font-style:italic; text-align:right;}
     u{font-style:italic}
-    div.block1{border-style:double; border-color:red; position:absolute; left:900px; top:50px; padding:15px; float:right; width:259px; height:195px;}
+    div.block1{border-style:double; border-color:red; position:absolute; left:900px; top:55px; padding:15px; float:right; width:259px; height:195px;}
+    img{float:right;}
   </style>
 <body>
   <hr>
