--- a/Tema6/index2/index22.html
+++ b/Tema6/index2/index22.html
@@ -4,13 +4,13 @@
 Прапор України
 </title>
 <style>
-img{display:block; position:absolute; top:10; left:70; width:800; height:400;}
+img{display:block; position:absolute; top:10; left:70; width:800; height:450;}
 .su{font-family: Garamond; font-size:50pt; font-weight:800; color: yellow; position:absolute; top:100; left:300;}
 .gs{font-family: Garamond; font-size:60pt; font-weight:900; color: blue; position:absolute; top:250; left:300;}
 </style>
 </head>
 <body>
-<img src="Без названия (1).png" alt="Прапор України">
+<img src="flag_ukrainy.jpg" alt="Прапор України">
 <div class="su">Слава Україні!</div>
 <div class="gs">Героям слава!</div>
 </body>
