--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -4,7 +4,7 @@
 Ковзани фігурні Tempish Olimpia/39 (1300001810/39)
 </title>
 <style>
-p.header{color:#2980B9; font-size:xlarge; font-family:Arial;}
+p.header{color:#2980B9; font-size:xx-large; font-family:Arial; text-align:center;}
 p.description1{color:#3498DB; font-size:large; font-family:Arial;}
 p.description2{color:black; font-size:medium; font-family:Arial;}
   .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:500px 50px;}
