--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -5,11 +5,11 @@
 </title>
 <style>
 p.header{color:#2980B9; font-size:xx-large; font-family:Arial; text-align:center;}
-p.description1{color:#3498DB; font-size:large; font-family:Arial;}
-p.description2{color:black; font-size:medium; font-family:Arial;}
+p.description1{color:#3498DB; font-size:large; font-family:Arial; margin:20px 25px;}
+p.description2{color:black; font-size:medium; font-family:Arial; margin:5px 25px;}
   .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:100px 550px;}
-  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:200px 550px;}
-  img{float:left;}
+  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:150px 550px;}
+  img{float:left; margin:25px;}
 </style>
 </head>
 <body>
