--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -7,14 +7,14 @@
 p.header{color:#2980B9; font-size:xx-large; font-family:Arial; text-align:center;}
 p.description1{color:#3498DB; font-size:large; font-family:Arial; margin:20px 25px;}
 p.description2{color:black; font-size:medium; font-family:Arial; margin:5px 25px;}
-  .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:100px 550px;}
-  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:150px 550px;}
+  .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:100px 600px;}
+  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:130px 600px;}
   img{float:left; margin:25px;}
 </style>
 </head>
 <body>
 <p class="header">Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
-<p><img src="tempish_1300001810_39_images_11072990.jpg" alt="Ковзани фігурні Tempish Olimpia/39 (1300001810/39)" width="300px" height="316"></p>
+<p><img src="tempish_1300001810_39_images_11072990.jpg" alt="Ковзани фігурні Tempish Olimpia/39 (1300001810/39)" width="350px" height="369px"></p>
 <div class="block1">980 грн</div>
 <div class="block2">Купити</div>
 <div><p class="description1">Опис Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
