--- a/Tema6/index2.html
+++ b/Tema6/index2.html
@@ -4,11 +4,11 @@
 Домашня робота
 </title>
 <style>
-a{font-family:Monotype Corsiva; font-size:large;}
+a{font-family:Monotype Corsiva; font-size:xx-large;}
 </style>
 </head>
 <body>
-<a href="index2/index21.html">Варіант 1(за зразком веб-сторінки)</a>
+<a href="index2/index21.html">Варіант 1(за зразком веб-сторінки)</a><br>
 <a href="index2/index22.html">Варіант 2(за зразком гіпертексту)</a>
 </body>
 </html>
