--- a/Tema6/index1.html
+++ b/Tema6/index1.html
@@ -5,17 +5,18 @@
   </title>
   <style>
     h1{color:#C0392B; font-size: xx-large; margin:7% 20%; font-family:Monotype Corsiva;}
-    p{color:#3498DB; font-size:large; margin:1.5% 15%; font-family:Calibri; float: left;}
+    p{color:#3498DB; font-size:large; margin:1.5% 15%; font-family:Calibri;}
     p.end{color:grey; font-style:italic; text-align:right;}
     u{font-style:italic}
+    div{float:left}
     div.block1{border-style:double; border-color:red; position:absolute; left:900px; top:49px; padding:15px; float:right; width:259px; height:195px;}
-    img{float:right;}
   </style>
 <body>
   <hr>
-  <h1><b>Троянда столиста</b></h1><div class="block1"><img src="052f8d0c7087d4.jpg" alt="Троянда столиста"></div><p> Граціозні форми, ніжне забарвлення, витончений
+  <h1><b>Троянда столиста</b></h1><div class="block1"><img src="052f8d0c7087d4.jpg" alt="Троянда столиста"></div>
+  <div><p> Граціозні форми, ніжне забарвлення, витончений
 аромат <b>троянди</b> з незапам’ятних часів чарували людей. Тому й
-створено <b>безліч легенд</b> про цю чарівну, ніжну й чудову квітку.</p><p><u> За
+    створено <b>безліч легенд</b> про цю чарівну, ніжну й чудову квітку.</p></div><p><u> За
 староіндійською легендою,</u> прекрасна богиня <b>Лакшмі</b> народилася з
 пуп’янка троянди.</p><p><u> У древньому індійському міфі</u> розповідається, що
 прегарний юнак <b>Адоніс</b>, який уособлював прихід весни, постав із
