--- a/Tema6/index2/index21.html
+++ b/Tema6/index2/index21.html
@@ -5,18 +5,19 @@
 </title>
 <style>
 p.header{color:#2980B9; font-size:xx-large; font-family:Arial; text-align:center;}
-p.description1{color:#3498DB; font-size:large; font-family:Arial; margin:20px 25px;}
-p.description2{color:black; font-size:medium; font-family:Arial; margin:5px 25px;}
-  .block1{background-color:#FAD7A0; font-size:large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:100px 600px;}
-  .block2{background-color:green; font-size:medium; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:130px 600px;}
-  img{float:left; margin:25px;}
+p.description1{color:#3498DB; font-size:x-large; font-family:Arial; margin:20px 25px;}
+p.description2{color:black; font-size:large; font-family:Arial; margin:5px 25px;}
+  .block1{background-color:#FAD7A0; font-size:x-large; font-weight:bold; font-family:Arial; color:#424949; width:200px; height:100px; margin:100px 600px;}
+  .block2{background-color:green; font-size:x-large; font-weight:bold; font-family:Arial; color:white; width:200px; height:100px; margin:130px 600px;}
+  img{float:left; margin:25px; 50px}
+  table{border:2px; border-color:#3498DB}
 </style>
 </head>
 <body>
 <p class="header">Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
 <p><img src="tempish_1300001810_39_images_11072990.jpg" alt="Ковзани фігурні Tempish Olimpia/39 (1300001810/39)" width="350px" height="369px"></p>
-<div class="block1">980 грн</div>
-<div class="block2">Купити</div>
+<div class="block1" align="center">980 грн</div>
+<div class="block2" align="center">Купити</div>
 <div><p class="description1">Опис Ковзани фігурні Tempish Olimpia/39 (1300001810/39)</p>
 <p class="description2">Tempish Olimpia — жіночі фігурні ковзани для аматорського катання і професійного заняття фігурним катанням.
 Зовнішній матеріал черевика — класичний ПВХ, додає жорсткості зовнішній частині черевика та забезпечує високий ступінь захисту ноги. Внутрішній матеріал черевика — нейлон Velvet, який зберігає тепло у взутті.
