--- a/Tema5/index1/index13.html
+++ b/Tema5/index1/index13.html
@@ -14,6 +14,7 @@
   <object data="videoplayback.mp4" type="video/mp4"></object>
 <hr>
   <p><Font face="Segoe Print" size=6 color="white">Відео 4</Font></p>
-<video src="videoplayback.mp4"></video>
+<video>
+  <source src="videoplayback.mp4" type="video/mp4"></video>
 </body>
 </html>
