--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -1,14 +1,28 @@
 <html>
 <head>
-<title>
-Сайт нашої школи
-</title>
-<style>
-div{font-size:xx-large; font-family:Segoe Print;}
-</style>]
+  <title>
+    Сайт нашої школи
+  </title>
+  <style>
+    div.header{font-size:xx-large; font-family:Segoe Print;}
+    div div{font-family:Segoe Print;}
+</style>
 </head>
 <body>
-<div>Сайт нашої школи</div>
-
+  <div>
+    <div class="header">Сайт нашої школи</div>
+    <div><img src="" alt=""></div>
+  </div>
+  <div>
+    <div>Головна</div>
+    <div>Адміністрація</div>
+    <div>Вчителі</div>
+    <div>Класи</div>
+    <div>Учні</div>
+  </div>
+  <div>
+    <div></div>
+    <div></div>
+  </div>
 </body>
 </html>
