--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -4,16 +4,17 @@
     Сайт нашої школи
   </title>
   <style>
-    div.header{font-size:xx-large; font-family:Segoe Print;}
-    div div{font-family:Segoe Print;}
+    div{font-family:Segoe Print;}
+    div:first-child{font-size:xx-large; text-align:center;}
+    div.menu div{float:right;}
 </style>
 </head>
 <body>
   <div>
-    <div class="header">Сайт нашої школи</div>
-    <div><img src="" alt=""></div>
+    <div>Сайт нашої школи</div>
+    <div><img src="" alt="Логотип"></div>
   </div>
-  <div>
+  <div class="menu">
     <div>Головна</div>
     <div>Адміністрація</div>
     <div>Вчителі</div>
