--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -5,13 +5,13 @@
   </title>
   <style>
     div{font-family:Segoe Print;}
-    div:first-child{font-size:xx-large; text-align:center;}
+    div:header{font-size:xx-large; text-align:center;}
     div.menu div{float:right;}
 </style>
 </head>
 <body>
   <div>
-    <div>Сайт нашої школи</div>
+    <div class="header">Сайт нашої школи</div>
     <div><img src="" alt="Логотип"></div>
   </div>
   <div class="menu">
