--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -5,7 +5,7 @@
   </title>
   <style>
     div{font-family:Segoe Print;}
-    div:header{font-size:xx-large; text-align:center;}
+    div.header{font-size:xx-large; text-align:center; float:right;}
     div.menu div{float:right;}
 </style>
 </head>
