--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -5,14 +5,16 @@
   </title>
   <style>
     div{font-family:Segoe Print;}
-    div.header{font-size:xx-large; text-align:center; float:right;}
-    div.menu div{float:right;}
+    .header{font-size:xx-large; text-align:center; color:#8E44AD;}
+    .menu div{float:right; background-color:#A569BD; color:white;}
+    .content1{background-color:#A9CCE3;}
+    .content2{background-color:#A569BD;}
 </style>
 </head>
 <body>
   <div>
     <div class="header">Сайт нашої школи</div>
-    <div><img src="" alt="Логотип"></div>
+    <div><img src="Gerb-9-00.jpg" alt="Логотип"></div>
   </div>
   <div class="menu">
     <div>Головна</div>
@@ -22,8 +24,8 @@
     <div>Учні</div>
   </div>
   <div>
-    <div></div>
-    <div></div>
+    <div class="content1"></div>
+    <div class="content2"></div>
   </div>
 </body>
 </html>
