--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -1,14 +1,15 @@
-<html>
 <head>
   <title>
     Сайт нашої школи
   </title>
   <style>
     div{font-family:Segoe Print;}
-    .header{font-size:xx-large; text-align:center; color:#8E44AD;}
-    .menu div{float:right; background-color:#A569BD; color:white;}
+    .header{font-size:xx-large; text-align:center; color:#8E44AD; padding:7%;}
+    .menu{background-color:#A569BD; color:white; position:absolute; top:250px; width:100%;}
     .content1{background-color:#A9CCE3;}
     .content2{background-color:#A569BD;}
+	img{width:200px; height:196px; position:absolute; top:25px; right:50px;}
+	div.menu>div{float:left; margin:2% 6%; font-size:x-large;}
 </style>
 </head>
 <body>
