--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -1,15 +1,20 @@
+<html>
 <head>
   <title>
     Сайт нашої школи
   </title>
   <style>
     div{font-family:Segoe Print;}
-    .header{font-size:xx-large; text-align:center; color:#8E44AD; padding:7%;}
+    .header{font-size:45px; text-align:center; color:#8E44AD; padding:7%;}
     .menu{background-color:#A569BD; color:white; position:absolute; top:250px; width:100%;}
-    .content1{background-color:#A9CCE3;}
-    .content2{background-color:#A569BD;}
+    .content1{background-color:#A9CCE3; position:absolute; top:348px; height:150px; width:100%}
+    .content2{background-color:#85C1E9; position:absolute; bottom:0px; top:498px; width:100%;}
 	img{width:200px; height:196px; position:absolute; top:25px; right:50px;}
 	div.menu>div{float:left; margin:2% 6%; font-size:x-large;}
+	div a:hover{background-color:#85C1E9;}
+	div a:active{color:red;}
+	div a:link{color:white;}
+	div a:visited{color:blue;}
 </style>
 </head>
 <body>
@@ -18,11 +23,11 @@
     <div><img src="Gerb-9-00.jpg" alt="Логотип"></div>
   </div>
   <div class="menu">
-    <div>Головна</div>
-    <div>Адміністрація</div>
-    <div>Вчителі</div>
-    <div>Класи</div>
-    <div>Учні</div>
+    <div><a href="Holovna.html">Головна</a></div>
+    <div><a href="Administration.html">Адміністрація</a></div>
+    <div><a href="Teachers.html">Вчителі</a></div>
+    <div><a href="Classes.html">Класи</a></div>
+    <div><a href="Students.html">Учні</a></div>
   </div>
   <div>
     <div class="content1"></div>
