--- a/Tema7/index1/Holovna.html
+++ b/Tema7/index1/Holovna.html
@@ -6,30 +6,9 @@
   <style>
     div{font-family:Segoe Print;}
     .header{font-size:45px; text-align:center; color:#8E44AD; padding:7%;}
-    .menu{background-color:#A569BD; color:white; position:absolute; top:250px; width:100%;}
-    .content1{background-color:#A9CCE3; position:absolute; top:348px; bottom:0px; width:100% text-align:center; font-size:xx-large;}
-	img{width:200px; height:196px; position:absolute; top:25px; right:50px;}
-	div.menu>div{float:left; margin:2% 6%; font-size:x-large;}
-	div a:hover{background-color:#85C1E9;}
-	div a:active{color:red;}
-	div a:link{color:white;}
-	div a:visited{color:blue;}
 </style>
 </head>
 <body>
-  <div>
-    <div class="header">Сайт нашої школи</div>
-    <div><img src="Gerb-9-00.jpg" alt="Логотип"></div>
-  </div>
-  <div class="menu">
-    <div><a href="index1/Holovna.html">Головна</a></div>
-    <div><a href="index1/Administration.html">Адміністрація</a></div>
-    <div><a href="index1/Teachers.html">Вчителі</a></div>
-    <div><a href="index1/Classes.html">Класи</a></div>
-    <div><a href="index1/Students.html">Учні</a></div>
-  </div>
-  <div>
-    <div class="content1">Головна</div>
-  </div>
+    <div class="header">Головна</div>
 </body>
 </html>
