--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -23,11 +23,11 @@
     <div><img src="Gerb-9-00.jpg" alt="Логотип"></div>
   </div>
   <div class="menu">
-    <div><a href="index1/Holovna.html">Головна</a></div>
-    <div><a href="index1/Administration.html">Адміністрація</a></div>
-    <div><a href="index1/Teachers.html">Вчителі</a></div>
-    <div><a href="index1/Classes.html">Класи</a></div>
-    <div><a href="index1/Students.html">Учні</a></div>
+    <div><a href="Holovna.html">Головна</a></div>
+    <div><a href="Administration.html">Адміністрація</a></div>
+    <div><a href="Teachers.html">Вчителі</a></div>
+    <div><a href="Classes.html">Класи</a></div>
+    <div><a href="Students.html">Учні</a></div>
   </div>
   <div>
     <div class="content1"></div>
