--- a/Tema7/index1.html
+++ b/Tema7/index1.html
@@ -12,7 +12,7 @@
 	img{width:200px; height:196px; position:absolute; top:25px; right:50px;}
 	div.menu>div{float:left; margin:2% 6%; font-size:x-large;}
 	div a:hover{background-color:#85C1E9;}
-	div a:active{color:red;}
+	div a:active{background-color:red;}
 	div a:link{color:white;}
 	div a:visited{color:blue;}
 </style>
