--- a/Tema7/index2.html
+++ b/Tema7/index2.html
@@ -1,13 +1,14 @@
 <html>
-<head>
-<title>
-Домашня робота
-</title>
-<style>
-a{font-family:Arial Black; font-size:xx-large;}
-</head>
-<body>
-<a href="index2/index21.html">Варіант 1(за зразком веб-сторінки)</a><br>
-<a href="index2/index22.html">Варіант 2(за зразком гіпертексту)</a>
-</body>
+  <head>
+    <title>
+      Домашня робота
+    </title>
+    <style>
+      a{font-family:Arial Black; font-size:xx-large;}
+    </style>
+  </head>
+  <body>
+    <a href="index2/index21.html">Варіант 1(за зразком веб-сторінки)</a><br>
+    <a href="index2/index22.html">Варіант 2(за зразком гіпертексту)</a>
+  </body>
 </html>
