--- a/Tema7/index2/index21/Holovnastorinka.html
+++ b/Tema7/index2/index21/Holovnastorinka.html
@@ -5,6 +5,7 @@
 </title>
 <style>
 p{color:#8E44AD; font-size:25px; vertical-align:middle;}
+  </style>
 </head>
 <body>
 <p align="center">Головна сторінка</p>
