--- a/Tema8/index1.html
+++ b/Tema8/index1.html
@@ -5,20 +5,20 @@
 </title>
 <style>
 h1{font-family:Arial Black; font-size:30px; color:#A93226; text-align:center;}
-  div{font-family:Aria; font-size:xx-large; overflow:auto; border-style:groove; border-color:#A93226; border-width:5px; padding:5px;}
+  div{font-family:Aria; font-size:xx-large; overflow:auto; border-style:groove; border-color:#A93226; border-width:5px; padding:5px; display:inline;}
 </style>
 </head>
 <body>
 <h1>Енеїда</h1>
-  <div>Еней був парубок моторний
-І хлопець хоть куди козак,
-Удавсь на всеє зле проворний,
-Завзятіший од всіх бурлак.
-Но греки, як спаливши Трою,
-Зробили з неї скирту гною,
-Він, взявши торбу, тягу дав;
-Забравши деяких троянців,
-Осмалених, як гиря, ланців,
+  <div>Еней був парубок моторний<br>
+І хлопець хоть куди козак,<br>
+Удавсь на всеє зле проворний,<br>
+Завзятіший од всіх бурлак.<br>
+Но греки, як спаливши Трою,<br>
+Зробили з неї скирту гною,<br>
+Він, взявши торбу, тягу дав;<br>
+Забравши деяких троянців,<br>
+Осмалених, як гиря, ланців,<br>
 П'ятами з Трої накивав.</div>
 <div><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель.jpg" alt="Енеїда" width="250px height="274px"></div>
 <div></div>
