--- a/Tema8/index1.html
+++ b/Tema8/index1.html
@@ -5,7 +5,7 @@
 </title>
 <style>
 h1{font-family:Arial Black; font-size:30px; color:#A93226; text-align:center;}
-  div{font-family:Aria; font-size:xx-large; overflow:auto; border-style:groove; border-color:#A93226; border-width:5px; padding:5px; display:inline;}
+  div{font-family:Aria; font-size:xx-large; overflow:auto; border-style:groove; border-color:#A93226; border-width:5px; padding:5px; display:inline-block;}
 </style>
 </head>
 <body>
