--- a/Tema8/index1.html
+++ b/Tema8/index1.html
@@ -5,9 +5,11 @@
 </title>
 <style>
 h1{font-family:Arial Black; font-size:45px; color:#A93226; text-align:center;}
-  div{font-family:Aria; font-size:xx-large; overflow:auto; border-style:groove; border-color:#A93226; border-width:5px; padding:5px; display:inline-block; width:30%; height:50%;}
-  div.one{margin-left:20px;}
+  div.one, div.two, div.three{font-family:Aria; font-size:xx-large; overflow:auto; border-style:groove; border-color:#A93226; border-width:9px; padding:5px; display:inline-block; width:30%; height:50%;}
+  div.one{margin-left:20px; background-color:#A93226; color:white;}
   div.three{margin-right:20px;}
+  div.content{width:50%; height:80%; background-color:#A93226; color:white; display:inline-block; float:right; position:relative; top:-200px; overflow:auto;}
+  div.image{display:inline-block; float:left; position:relative; top:20px;}
 </style>
 </head>
 <body>
@@ -22,7 +24,19 @@ h1{font-family:Arial Black; font-size:45px; color:#A93226; text-align:center;}
 Забравши деяких троянців,<br>
 Осмалених, як гиря, ланців,<br>
 П'ятами з Трої накивав.</div>
-<div><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель.jpg" alt="Енеїда" width="250px height="274px"></div>
-<div class="three"></div>
+<div class="two"><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель.jpg" alt="Енеїда" width="298px" height="327px"></div>
+<div class="three">
+<div class="image"><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель.jpg" alt="Енеїда" width="200px" height="219px"></div>
+<div class="content"><Font size="4">Еней був парубок моторний<br>
+І хлопець хоть куди козак,<br>
+Удавсь на всеє зле проворний,<br>
+Завзятіший од всіх бурлак.<br>
+Но греки, як спаливши Трою,<br>
+Зробили з неї скирту гною,<br>
+Він, взявши торбу, тягу дав;<br>
+Забравши деяких троянців,<br>
+Осмалених, як гиря, ланців,<br>
+П'ятами з Трої накивав.</Font></div>
+</div>
 </body>
 </html>
