--- a/Tema8/index1.html
+++ b/Tema8/index1.html
@@ -24,9 +24,9 @@ h1{font-family:Arial Black; font-size:45px; color:#A93226; text-align:center;}
 Забравши деяких троянців,<br>
 Осмалених, як гиря, ланців,<br>
 П'ятами з Трої накивав.</div>
-<div class="two"><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель.jpg" alt="Енеїда" width="298px" height="327px"></div>
+<div class="two"><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель (1).jpg" alt="Енеїда" width="298px" height="327px"></div>
 <div class="three">
-<div class="image"><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель.jpg" alt="Енеїда" width="200px" height="219px"></div>
+<div class="image"><img src="Анатолій Базилевич, Скитаюсь по миру, мов ланець, По всім топчуся берегам, 1967, папір, туш, акварель (1).jpg" alt="Енеїда" width="200px" height="219px"></div>
 <div class="content"><Font size="4">Еней був парубок моторний<br>
 І хлопець хоть куди козак,<br>
 Удавсь на всеє зле проворний,<br>
