--- a/Tema8/index2.html
+++ b/Tema8/index2.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <a href="index2/index21.html">Варіант 1(за зразком гіпертексту)</a>
+    <a href="index2/index21.html">Варіант 1(за зразком гіпертексту)</a><br>
     <a href="index2/index22.html">Варіант 2(за зразком веб-сторінки)</a>
   </body>
 </html>
