--- a/Tema8/index2/index21.html
+++ b/Tema8/index2/index21.html
@@ -1,10 +1,14 @@
 <html>
-<head>
-<title>
-</title>
-<style>
-</style>
-</head>
-<body>
-</body>
+  <head>
+    <title>
+      Медіа каталог
+    </title>
+    <style>
+      h1{font-family:
+    </style>
+  </head>
+  <body>
+    <h1>Медіа каталог</h1>
+    
+  </body>
 </html>
