--- a/Tema8/index2/index21.html
+++ b/Tema8/index2/index21.html
@@ -4,8 +4,8 @@
       Медіа каталог
     </title>
     <style>
-      h1{font-family:}
-      #1{display:inline-block; background-color:black; padding:10px; border-width:5px; border-color:white; border-style:ridge; width:100%; height:30%; margin:25px;}
+      h1{font-family:Bookman Old Style; font-wight:bold; font-size:20px; color:black;}
+      #1{display:inline-block; font-family:Bookman Old Style; background-color:black; padding:10px; border-width:5px; border-color:white; border-style:ridge; width:100%; height:30%; margin:25px;}
       div.image{width:300px; height:225px;}
       div.text{background-color:#F7DC6F; color:black; padding:5px; font-size:xx-large;}
       div.audio{background-color:#CD6155; color:white; padding:5px;}
@@ -20,8 +20,8 @@
       <div class="text">Led Zeppelin (Лед Зе́ппелін, походить від англ. Lead Zeppelin — «свинцевий дирижабль») — британський рок-гурт, що вважається одним із засновників хард-року та хеві-металу.
       Led Zeppelin досі високо шанується за музичні досягнення, нестандартність, комерційний успіх і широкий вплив. Гурт продав понад 300 мільйонів альбомів у світі[5][6][7][8][9], включно із 112 мільйонами в США</div>
       <div class="audio"><h2>Whole Lotta Love</h2><br>
-        <h3>Trek 1</h3><a href="" type="audio/mpeg3"><br>
-        <h3>Trek 2</h3><audio src="" type="audio/mpeg3" controls></audio>
+        <h3>Trek 1</h3><a href="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3"><br>
+        <h3>Trek 2</h3><audio src="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3" controls></audio>
         </div>
       </div>
   </body>
