--- a/Tema8/index2/index21.html
+++ b/Tema8/index2/index21.html
@@ -23,7 +23,7 @@
         Led Zeppelin (Лед Зе́ппелін, походить від англ. Lead Zeppelin — «свинцевий дирижабль») — британський рок-гурт, що вважається одним із засновників хард-року та хеві-металу.Led Zeppelin досі високо шанується за музичні досягнення, нестандартність, комерційний успіх і широкий вплив. Гурт продав понад 300 мільйонів альбомів у світі, включно із 112 мільйонами в США.
       </div>
       <div class="audio"><h2>Whole Lotta Love</h2><br>
-        <h3>Trek 1</h3><a href="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3"><br>
+        <a href="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3"><h3>Trek 1</h3></a><br>
         <h3>Trek 2</h3><audio src="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3" controls></audio>
       </div>
      </div>
