--- a/Tema8/index2/index21.html
+++ b/Tema8/index2/index21.html
@@ -4,11 +4,11 @@
       Медіа каталог
     </title>
     <style>
-      h1{font-family:Bookman Old Style; font-wight:bold; font-size:20px; color:black;}
-      #1{display:inline-block; font-family:Bookman Old Style; background-color:black; padding:10px; border-width:5px; border-color:white; border-style:ridge; width:100%; height:30%; margin:25px;}
-      div.image{display:inline-block; width:300px; height:225px;}
-      div.text{display:inline-block; background-color:#F7DC6F; color:black; padding:5px; font-size:xx-large;}
-      div.audio{display:inline-block; background-color:#CD6155; color:white; padding:5px;}
+      h1{font-family:Bookman Old Style; font-wight:bold; font-size:20px; color:black; text-align:center;}
+      #1{font-family:Bookman Old Style; background-color:black; padding:10px; border-width:5px; border-color:white; border-style:ridge; width:100%; height:30%; margin:25px;}
+      div.image{display:inline-block; width:400px; height:300px; margin:37.5px 50px;}
+      div.text{display:inline-block; background-color:#F7DC6F; color:black; padding:5px; font-size:xx-large; width:700px; overflow:auto;}
+      div.audio{display:inline-block; background-color:#CD6155; color:white; padding:5px; width:200px; overflow:auto;}
       div.audio>h2{font-size:xx-large;}
       div.audio h3{font-size:x-large;}
     </style>
