--- a/Tema8/index2/index21.html
+++ b/Tema8/index2/index21.html
@@ -1,31 +1,19 @@
 <html>
   <head>
     <title>
-      Медіа каталог
+      Музичний каталог
     </title>
-    <style>
-      h1{font-family:Bookman Old Style; font-wight:bold; font-size:20px; color:black; text-align:center;}
-      #1{font-family:Bookman Old Style; background-color:black; padding:10px; border-width:5px; border-color:white; border-style:ridge; width:100%; height:30%; margin:25px;}
-      div.image{display:inline-block; width:400px; height:300px; margin:37.5px 50px;}
-      div.text{display:inline-block; background-color:#F7DC6F; color:black; padding:5px; font-size:xx-large; width:700px; overflow:auto;}
-      div.audio{display:inline-block; background-color:#CD6155; color:white; padding:5px; width:200px; overflow:auto;}
-      div.audio>h2{font-size:xx-large;}
-      div.audio h3{font-size:x-large;}
-    </style>
+    <link rel="stylesheet" href="index21/Style.css">
   </head>
   <body>
-    <h1>Медіа каталог</h1>
-    <div id="1">
-      <div class="image">
-        <img src="hqdefault.jpg" alt="Led Zeppelin" width="300px" height="225px">
+    <h1>Музичний каталог</h1>
+    <div class="one">
+      <div class="image"><img src="hqdefault.jpg" alt="image" width="300px" height="225px"></div>
+      <div class="content1"><p>Led Zeppelin (Лед Зеппелін, походить від англ. Lead Zeppelin — «свинцевий дирижабль») — британський рок-гурт, що вважається одним із засновників хард-року та хеві-металу.Led Zeppelin досі високо шанується за музичні досягнення, нестандартність, комерційний успіх і широкий вплив. Гурт продав понад 300 мільйонів альбомів у світі, включно із 112 мільйонами в США.</p>
       </div>
-      <div class="text">
-        Led Zeppelin (Лед Зе́ппелін, походить від англ. Lead Zeppelin — «свинцевий дирижабль») — британський рок-гурт, що вважається одним із засновників хард-року та хеві-металу.Led Zeppelin досі високо шанується за музичні досягнення, нестандартність, комерційний успіх і широкий вплив. Гурт продав понад 300 мільйонів альбомів у світі, включно із 112 мільйонами в США.
-      </div>
-      <div class="audio"><h2>Whole Lotta Love</h2><br>
-        <a href="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3"><h3>Trek 1</h3></a><br>
-        <h3>Trek 2</h3><audio src="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3" controls></audio>
-      </div>
-     </div>
-  </body>
+      <div class="content2"><h2>Whole Lotta Love</h2><br>
+        <a href="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3"><p>Trek 1</p></a><br>
+        <p>Trek 2</p><audio src="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3" controls></audio></div>
+    </div>
+    <body>
 </html>
