--- a/Tema8/index2/index21.html
+++ b/Tema8/index2/index21.html
@@ -15,5 +15,11 @@
         <a href="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3"><p>Trek 1</p></a><br>
         <p>Trek 2</p><audio src="Led+Zeppelin+1969+Led+Zeppelin+II+Whole+Lotta+Love.mp3" type="audio/mpeg3" controls></audio></div>
     </div>
+<div class="two">
+<div class="image1"><img src="AR-AL379_ADELE_8S_20151119145230.jpg" alt="Adele"></div>
+<div class="content3"><p>Адель Едкінс (англ. Adele Laurie Blue Adkins, нар. 5 травня 1988, Енфілд, північний Лондон), відома як Адель — англійська співачка, що виконує поп-джаз/соул, володарка п'ятнадцяти премій Греммі.</p></div>
+<div class="content4"><h2>Rolling in the deep</h2><a href="adele-rolling-in-the-deep (1).mp3" type="audio/mpeg3"><p>Trek 1</p></a>
+        <p>Trek 2</p><audio src="adele-rolling-in-the-deep (1).mp3" type="audio/mpeg3" controls></audio></div>
+</div>
     <body>
 </html>
