--- a/Tema8/index2/index22.html
+++ b/Tema8/index2/index22.html
@@ -1,10 +1,21 @@
 <html>
-<head>
-<title>
-</title>
-<style>
-</style>
-</head>
-<body>
-</body>
+  <head>
+    <title>
+      Фото колаж Box
+    </title>
+    <style>
+      img.1{position:inherit;}
+      img.2{position:static;}
+      img.3{position:relative;}
+      img.4{position:fixed;}
+      img.5{position:absolute;}
+    </style>
+  </head>
+  <body>
+    <img class="1" src="" alt="1">
+    <img class="2" src="" alt="2">
+    <img class="3"src="" alt="3">
+    <img class="4" src="" alt="4">
+    <img class="5" src="" alt="5">
+  </body>
 </html>
