--- a/Tema8/index2/index22.html
+++ b/Tema8/index2/index22.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <img class="1" src="" alt="1">
+    <img class="1" src="80052713_4278666_63cfd8303577.jpg" alt="1">
     <img class="2" src="" alt="2">
     <img class="3"src="" alt="3">
     <img class="4" src="" alt="4">
