--- a/Tema8/index2/index22.html
+++ b/Tema8/index2/index22.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <img class="1" src="80052713_4278666_63cfd8303577.jpg" alt="1">
-    <img class="2" src="" alt="2">
+    <img class="2" src="Кактус-цветущий.jpg" alt="2">
     <img class="3"src="" alt="3">
     <img class="4" src="" alt="4">
     <img class="5" src="" alt="5">
