--- a/Tema8/index2/index22.html
+++ b/Tema8/index2/index22.html
@@ -14,8 +14,8 @@
   <body>
     <img class="1" src="80052713_4278666_63cfd8303577.jpg" alt="1">
     <img class="2" src="Кактус-цветущий.jpg" alt="2">
-    <img class="3"src="" alt="3">
-    <img class="4" src="" alt="4">
-    <img class="5" src="" alt="5">
+    <img class="3"src="Hydrangeas.jpg" alt="3">
+    <img class="4" src="Tulips.jpg" alt="4">
+    <img class="5" src="Stihi-pro-oduvanchiki-dlya-detej.jpg" alt="5">
   </body>
 </html>
