--- a/Tema8/index2/index22.html
+++ b/Tema8/index2/index22.html
@@ -12,8 +12,8 @@
     </style>
   </head>
   <body>
-    <img class="1" src="80052713_4278666_63cfd8303577.jpg" alt="1">
-    <img class="2" src="Кактус-цветущий.jpg" alt="2">
+    <p><img class="1" src="80052713_4278666_63cfd8303577.jpg" alt="1"></p>
+    <p align="right"><img class="2" src="Кактус-цветущий.jpg" alt="2"></p>
     <img class="3"src="Hydrangeas.jpg" alt="3">
     <img class="4" src="Tulips.jpg" alt="4">
     <img class="5" src="Stihi-pro-oduvanchiki-dlya-detej.jpg" alt="5">
