--- a/Tema10/index1.html
+++ b/Tema10/index1.html
@@ -3,15 +3,28 @@
 <title>
 </title>
 <style>
+.boss{
+background-color:#99bbff;
+ width:97%;
+ height:50%;
+ padding:20px;
+display:flex;
+flex-direction:row;
+justify-content:space-around;
+align-items:center;
+}
+.one{ background-color:#2929a3; width:150px; height:30%; align-self:flex-start; flex-shrink:3; margin-left:15px; margin-right:15px;}
+.two{background-color:#99004d; width:250px; height:50%;flex-shrink:2;}
+#three{ background-color:#ffb3ff; width:350px; height:90%; margin-left:15px; margin-right:15px; flex-grow:2;}
 </style>
 </head>
 <body>
-<div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
+<div class="boss">
+<div class="one">1</div>
+<div class="two">2</div>
+<div id="three">3</div>
+<div class="two">4</div>
+<div class="one">5</div>
 </div>
 </body>
 </html>
